[JBIDE-7695] added check against <code>null</code> server type. fixed NPE that occurred when nonsense url was entered in connection wizard
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26835 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-23  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java
+	(performFinish): 
+	(getServerType):
+	[JBIDE-7695] added check against <code>null</code> server type. fixed NPE that occurred when nonsense url was entered in connection wizard 
+
 2010-11-19  André Dietisheim  <adietish@redhat.com>
 
 	* plugin.xml: 
