--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,15 @@
+2010-11-25  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (performTest): 
+	fixed NPE
+
+2010-11-24  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/InstanceView.java (.modifyText): 
+	[JBIDE-7694] removed refresh(es) of tableViewer (setInput should be enough), 
+	moved set of current cloud to central method with null-check,
+	removed clouds collection & replaced by fresh fetch in DeltaCloudManager
+
 2010-11-23  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java
