--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,27 @@
+2010-11-26  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/SecurePasswordStore.java: 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudPasswordStorageKey.java: 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java: 
+	(editCloud): 
+	(getPassword): 
+	(createClient):
+	(dispose):
+	(loadImage): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudManager.java (removeCloud): 
+	[JBIDE-7731] extracted password storage to its own class (removed duplicate code in EditCloudConnectionWizard, NewCloudConnectionWizard and DeltaCloud)
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java: 
+	(loadImage): 
+	[JBIDE-7694] removed duplicate loadImage(id) / getImage(id) methods
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(images): 
+	(instances)
+	(getImages): 
+	(getInstances): 	
+	(loadImages): 
+	(loadInstances): 
+	[JBIDE-7694] corrected lazy initialisation (to signal correctly that no instances had been loaded so far)
+
 2010-11-25  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java: 
