https://jira.jboss.org/browse/JBIDE-7758 , fixed.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27026 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.jsp/src/org/jboss/tools/jst/jsp/messages/messages.properties
+++ b/jst/plugins/org.jboss.tools.jst.jsp/src/org/jboss/tools/jst/jsp/messages/messages.properties
@@ -143,3 +143,4 @@ EXTERNALIZE_STRINGS_DIALOG_LOAD_BUNDLE=via <f:loadBundle> tag on the current pag
 EXTERNALIZE_STRINGS_DIALOG_USER_DEFINED=manually by user
 EXTERNALIZE_STRINGS_DIALOG_BUNDLE_NAME=Bundle name:
 EXTERNALIZE_STRINGS_DIALOG_WRONG_BUNDLE_PLACEMENT=Resource Bundle file should be created in the source folder.\n Basename will be incorect.
+EXTERNALIZE_STRINGS_DIALOG_CANNOT_ADD_LOAD_BUNDLE_TAG=Cannot add loadBundle tag
