[JBIDE-7761] added "show in remote system explorer" to the context menu of the Cloud View
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27030 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-30  André Dietisheim  <adietish@redhat.com>
+
+	* plugin.xml: 
+	[JBIDE-7761] added "show in remote system explorer" to the context menu of the Cloud View
+
 2010-11-26  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (addPages): 
