--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -16,7 +16,7 @@
 	fixed NPE
 
 2010-11-24  adietisheim  <adietisheim@adietisheim-thinkpad>
-
+slide
 	* src/org/jboss/tools/deltacloud/ui/views/InstanceView.java (.modifyText): 
 	[JBIDE-7694] removed refresh(es) of tableViewer (setInput should be enough), 
 	moved set of current cloud to central method with null-check,
