[JBIDE-7777] removed shadowing instance variable, fixed NPE
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27074 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-01  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (performFinish): 
+	[JBIDE-7777] removed shadowing instance variable, fixed NPE
+
 2010-11-30  André Dietisheim  <adietish@redhat.com>
 
 	* plugin.xml: 
