--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-02  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/ui/views/CVInstanceElement.java (getName): 
+	* src/org/jboss/tools/deltacloud/ui/views/CVInstancesCategoryElement.java (addInstances): 
+	[JBIDE-7779] changed label for instances in CloudView
+
 2010-12-01  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (performFinish): 
