--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,16 @@
+2010-12-02  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/CVInstancesCategoryElement.java (addInstances): 
+	* src/org/jboss/tools/deltacloud/ui/views/CVInstanceElement.java (getName): 
+	[JBIDE-7779] changed label for instances in CloudView
+
+2010-11-24  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/InstanceView.java (.modifyText): 
+	[JBIDE-7694] removed refresh(es) of tableViewer (setInput should be enough), 
+	moved set of current cloud to central method with null-check,
+	removed clouds collection & replaced by fresh fetch in DeltaCloudManager
+
 2010-11-19  André Dietisheim  <adietish@redhat.com>
 
 	* plugin.xml: 
