--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,12 @@
 2010-12-02  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java (createControl): 
+	* src/org/jboss/tools/deltacloud/ui/views/InstanceView.java: 
+	* src/org/jboss/tools/deltacloud/ui/views/ImageViewLabelAndContentProvider.java: 
+	* src/org/jboss/tools/deltacloud/ui/views/ImageView.java: 
+	* src/org/jboss/tools/deltacloud/ui/views/AbstractCloudChildrenTableView.java: 
+	* src/org/jboss/tools/deltacloud/ui/views/TableViewerColumnComparator.java: 
+	[JBIDE-7693] removed a lot of duplicate code, unified Instance- and ImageView, Image- and InstanceComparator	
 	* src/org/jboss/tools/deltacloud/ui/views/CVInstanceElement.java (getName): 
 	* src/org/jboss/tools/deltacloud/ui/views/CVInstancesCategoryElement.java (addInstances): 
 	[JBIDE-7779] changed label for instances in CloudView
