[JBIDE-7780] synchronized initialisation
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27087 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2010-12-02  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/ui/views/CVCloudElement.java (getChildren): 
+	[JBIDE-7780] synchronized children initialisation
 	* src/org/jboss/tools/deltacloud/ui/views/CloudViewElement.java (getName): 
 	* src/org/jboss/tools/deltacloud/ui/views/CVCloudElement.java (getName): 
 	* src/org/jboss/tools/deltacloud/ui/views/CVImageElement.java (getName): 
