[JBIDE-7790] corrected storage & retrieval of selected cloud in the preferences
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27135 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-03  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/ui/views/AbstractCloudChildrenTableView.java: 
+	[JBIDE-7790] corrected storage & retrieval of selected cloud in the preferences
+
 2010-12-02  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/ui/views/ImageViewLabelAndContentProvider.java 
