JBIDE-7816 NewProjectExamplesWizard blocks UI for a long time!
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27182 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -64,6 +64,7 @@ ProjectUtil_Invalid_preferences=Invalid preferences.
 ProjectUtil_Invalid_property=Invalid property.
 ProjectUtil_Invalid_URL=Invalid URL\: {0}
 ProjectUtil_Invalid_welcome_element=The welcome element has invalid the url attribute
+ProjectUtil_Parsing_project_description_files=Parsing project description files...
 ProjectUtil_Test=Test
 NewProjectExamplesWizardPage_Site=Site\:
 SeamRuntimeFix_Invalid_seam_runtime_fix=Invalid Seam runtime fix in {0}.
