[JBIDE-7688][JBIDE-7813] now getting images and instances in async manner by commands
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27185 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,11 @@
+2010-12-06  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java (validate): 
+	* src/org/jboss/tools/deltacloud/ui/views/ImageViewLabelAndContentProvider.java (asyncGetCloudElements): 
+	* src/org/jboss/tools/deltacloud/ui/views/InstanceViewLabelAndContentProvider.java (asyncGetCloudElements): 
+	* src/org/jboss/tools/deltacloud/ui/views/CVInstancesCategoryElement.java (getChildren): 
+	* src/org/jboss/tools/deltacloud/ui/views/CVImagesCategoryElement.java (getChildren): 
+
 2010-12-03  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/ui/views/CVImagesCategoryElement.java (filter): 
