[JBIDE-7819] I now show the user that things are being loaded ("Loading..." node). Since I now load data async now, nodes are added in #listChanged and I have to add children to the tree manually (and not return them on #getChildren)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27203 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,17 @@
+2010-12-07  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/CVCloudElementCategoryElement.java (setLoadingIndicator): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/LoadingCloudViewElement.java: 
+	[JBIDE-7819] I now show the user that things are being loaded ("Loading..." node)
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/CVImagesCategoryElement.java (listChanged): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/CVInstancesCategoryElement.java (listChanged): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/CloudViewElement.java 
+	(addChild): 
+	(addChildren): 
+	(removeChild): 
+	[JBIDE-7819] since loading data async now, nodes are added in #listChanged and I have to add children 
+	to the tree manually (and not return them on #getChildren)
+
 2010-12-06  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java (validate): 
