[JBIDE-7836] corrected tab order (bad widget creation order)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27226 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2010-12-08  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java (createWidgets): 
+	[JBIDE-7836] corrected tab order (bad widget creation order)
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImageWizard.java: 
 	renamed FindImage to FindImageWizard since it is a wizard
 
