--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-08  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (getImage): 
+	[JBIDE-7834] implemented #getLastImage(id) that queries the local cache and the server (fallback),
+	removed #getImage(String id), #loadImage(String imageId), removed #findInstanceById
+
 2010-12-06  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/InstanceFilter.java (InstanceFilter): 
