[JBIDE-7834] simplified binding, fixed find image by id (moved implementation to DeltaCloud)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27240 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,8 @@
 2010-12-08  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java 
+	(bindWidgets): 
+	[JBIDE-7834] simplified binding, fixed find image by id (moved implementation to DeltaCloud)
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java (createWidgets): 
 	[JBIDE-7836] corrected tab order (bad widget creation order)
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImageWizard.java: 
