--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,5 +1,10 @@
 2010-12-08  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/core/job/AbstractCloudElementJob.java: 
+	* src/org/jboss/tools/deltacloud/core/job/AbstractCloudJob.java: 
+	* src/org/jboss/tools/deltacloud/core/job/CloudElementSchedulingRule.java: 
+	* src/org/jboss/tools/deltacloud/core/job/CloudSchedulingRule.java: 
+	[JBIDE-7594] started scheduling rules. need further refinement. 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (getImage): 
 	[JBIDE-7834] implemented #getLastImage(id) that queries the local cache and the server (fallback),
 	removed #getImage(String id), #loadImage(String imageId), removed #findInstanceById
