[JBIDE-7849] removed shadowing instance variable to DeltaCloud
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27259 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-09  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudImage.java: 
+	[JBIDE-7849] removed shadowing instance variable to DeltaCloud
+
 2010-12-08  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/job/AbstractCloudElementJob.java: 
