--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-09  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java (.selectionChanged): 
+	[JBIDE-7849] only change selected cloud if a new cloud has been selected
+
 2010-12-08  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java 
