updated to include org.jboss.tools.deltacloud.as
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27271 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/features/org.jboss.tools.deltacloud.feature/ChangeLog
+++ b/deltacloud/features/org.jboss.tools.deltacloud.feature/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-12  André Dietisheim  <adietishn@redhat.com>
+
+        * feature.xml: Added org.jboss.tools.deltacloud.as
+
 2010-10-12  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* feature.xml: Fix warning regarding docs plugin id not being found by
