[JBIDE-7848] separated the usecases: actively getting images/instances and passive updates. You now get the images and dont need to trigger getting and get the update of it.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27278 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,5 +1,11 @@
 2010-12-09  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(loadImages): 
+	(loadInstances):
+	(getInstances): 
+	(getImages): 
+	[JBIDE-7848] separated the usecases: actively getting images/instances and passive updates. You now get the images and dont need to trigger getting and get the update of it. 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloudImage.java: 
 	[JBIDE-7849] removed shadowing instance variable to DeltaCloud
 
