[JBIDE-7848] refreshing viewer before adding new items
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27286 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2010-12-09  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementViewLabelAndContentProvider.java (inputChanged): 
+	[JBIDE-7848] refreshing viewer before adding new items 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java 
 	(.modifyText): 
 	(asyncSetImagesToViewer): 
