--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,9 @@
 2010-12-09  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java (asyncGetProfiles): 
+	[JBIDE-7818] replaced threads by jobs (so that I can implement proper job scheduling rules across deltacloud tools),
+	cleaned code - split code in several methods, removed profile combo initialization that was done in parallel to the 
+	fetch-profiles thread
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementViewLabelAndContentProvider.java (inputChanged): 
 	[JBIDE-7848] refreshing viewer before adding new items 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java 
@@ -12,7 +16,8 @@
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/CloudElementCategoryItem.java 
 	(getChildren): 
 	(asyncAddCloudElements): 
-	[JBIDE-7848] separated the usecases: actively getting images/instances and passive updates. You now get the images and dont need to trigger getting and get the update of it. 
+	[JBIDE-7848] separated the usecases: actively getting images/instances and passive updates. You now get the images and 
+	dont need to trigger getting and get the update of it. 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java (.selectionChanged): 
 	[JBIDE-7849] only change selected cloud if a new cloud has been selected
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java (dispose): 
