[JBIDE-7862] layouting the combo's parent as soon as the cloud name gets edited -> combo resizes to the space needed to show the whole name
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27358 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,9 @@
 2010-12-10  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java: 
+	(updateCloudSelector): 
+	[JBIDE-7862] layouting the combo's parent as soon as the cloud name gets edited 
+	-> combo resizes to the space needed to show the whole name
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (performFinish): 
 	[JBIDE-7856] removed DeltaCloudManager#notifyCloudRename and IDeltaCloudManagerListener#RENAME_EVENT. 
 	DeltaCloud now notifies about changes in its properties (images, instances, name),
