--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,15 @@
 2010-12-10  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/ui/commands/RefreshImagesHandler.java: 
+	* src/org/jboss/tools/deltacloud/ui/commands/RefreshInstancesHandler.java:
+	[JBIDE-7738] RefreshImagesHandler and RefreshInstancesHandler are now subclasses of 
+	RefreshCloudHandler that only refresh images / instances	 
+	* src/org/jboss/tools/deltacloud/ui/commands/RefreshCloudHandler.java (getDeltaCloud): 
+	[JBIDE-7738] added #getDeltaCloud so that it may be used by subclasses: RefreshImagesHandler, RefreshInstancesHandler
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java
+	(getAdapter): 
+	[JBIDE-7738] made ImageView and InstanceView adaptable, so that RefreshImageHandler and 
+	RefreshInstanceHandler may pick the cloud it shows
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java: 
 	(updateCloudSelector): 
 	[JBIDE-7862] layouting the combo's parent as soon as the cloud name gets edited 
