[JBIDE-7872] fixed case where new cloud == null was erroneously detected as new selected cloud
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27371 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,8 @@
 2010-12-10  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java
+	(isNewCloud): 
+	[JBIDE-7872] fixed case where new cloud == null was erroneously detected as new selected cloud 
 	* src/org/jboss/tools/deltacloud/ui/commands/RefreshImagesHandler.java: 
 	* src/org/jboss/tools/deltacloud/ui/commands/RefreshInstancesHandler.java:
 	[JBIDE-7738] RefreshImagesHandler and RefreshInstancesHandler are now subclasses of 
