[JBIDE-7864] added hasImages property tester, rename CreateInstanceHandler2 to CreateInstanceFromAnyImage,renamed CreateInstanceHandler to CreateInstanceFromSpecificImage
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27395 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-13  André Dietisheim  <adietish@redhat.com>
+
+	* plugin.xml: 
+	[JBIDE-7864] added hasImages property tester, rename CreateInstanceHandler2 to CreateInstanceFromAnyImage,
+	renamed CreateInstanceHandler to CreateInstanceFromSpecificImage
+
 2010-12-10  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java
