[JBIDE-7877] notifying about instances that were added
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27403 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-13  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+ 	(PROP_INSTANCES_ADDED):
+ 	(createInstance): 
+	[JBIDE-7877] added notification for instances being added
+
 2010-12-10  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (loadImages):
