[JBIDE-7877] replaced state- and action-strings in DeltaCloudInstace by enums
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27404 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,15 @@
 2010-12-13  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstanceWizard.java (performFinish): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/InstanceViewLabelAndContentProvider.java (getStatusIcon): 
+	* src/org/jboss/tools/deltacloud/ui/views/PerformDestroyInstanceActionThread.java (run): 
+	* src/org/jboss/tools/deltacloud/ui/views/PerformInstanceActionJob.java (PerformInstanceActionJob): 
+	(run): 
+	* src/org/jboss/tools/deltacloud/ui/commands/StopInstanceHandler.java (stopInstance): 
+	* src/org/jboss/tools/deltacloud/ui/commands/StartInstanceHandler.java (startInstance): 
+	* src/org/jboss/tools/deltacloud/ui/commands/RebootInstanceHandler.java (rebootInstance): 
+	* src/org/jboss/tools/deltacloud/ui/commands/AbstractInstanceHandler.java (executeInstanceAction): 
+	[JBIDE-7877] replaced state- and action-strings in DeltaCloudInstace by enums
 	* plugin.xml: 
 	[JBIDE-7864] added hasImages property tester, rename CreateInstanceHandler2 to CreateInstanceFromAnyImage,
 	renamed CreateInstanceHandler to CreateInstanceFromSpecificImage
