--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -4,6 +4,13 @@
  	(PROP_INSTANCES_ADDED):
  	(createInstance): 
 	[JBIDE-7877] added notification for instances being added
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(IInstanceStateMatcher.matchesState): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstance.java (State): 
+	(Action): 
+	(getState): 
+	(performInstanceAction): 
+	[JBIDE-7877] replaced state- and action-strings in DeltaCloudInstace by enums
 
 2010-12-10  André Dietisheim  <adietish@redhat.com>
 
